[package]
name = "hangman"
version = "0.1.0"
authors = ["Peter Bryant <peter@ptrbrynt.com>"]
edition = "2018"
description = "A simple game of hangman."
readme = "README.md"
repository = "https://github.com/ptrbrynt/hangman"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eff-wordlist = "1.0.2"